# symbols

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml  docker-compose.yaml  docker-entrypoint.sh
example/fixtures/mariadb/: schema.sql
example/src/: lib.rs  model.rs
example/tests/: it_works.rs
symbols/: Cargo.toml
symbols-models/: Cargo.toml
symbols-models/src/: lib.rs
symbols/src/: lib.rs
