[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.40", default-features = false }
quote = "1.0.20"
#sea-orm = { version = "0.10.2", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
sea-orm = { git = "https://github.com/nappa85/sea-orm.git", branch = "isolation-level", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.139", features = ["derive"] }
syn = { version = "1.0.98", features = ["full"] }
#symbols = "0.10.0"
symbols = { path = "../symbols" }
tokio = "1.20.0"
