[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.47", default-features = false }
quote = "1.0.21"
sea-orm = { version = "0.10.5", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.148", features = ["derive"] }
syn = { version = "1.0.105", features = ["full"] }
symbols = "0.10.5"
tokio = "1.22.0"
