[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.51", default-features = false }
quote = "1.0.23"
sea-orm = { version = "1.0.0", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.152", features = ["derive"] }
syn = { version = "1.0.109", features = ["full"] }
symbols = "1.0.0"
tokio = "1.25.0"
