[package]
name = "symbols"
version = "0.10.5"
edition = "2021"
authors = ["Marco Napetti"]
repository = "https://github.com/nappa85/symbols"
documentation = "https://docs.rs/symbols"
readme = "../README.md"
license = "WTFPL"
description = "Proc-macro utility to populate enums from database data"
categories = ["data-structures", "development-tools::procedural-macro-helpers", "database"]
keywords = ["proc-macro", "enum", "database"]

[dependencies]
bincode = "1.3.3"
heck = "0.4.0"
itertools = "0.10.5"
proc-macro2 = { version = "1.0.47", default-features = false }
quote = "1.0.21"
sea-orm = "0.10.5"
serde = "1.0.148"
syn = { version = "1.0.105", features = ["full"] }
symbols-models = "0.10.5"
tracing = "0.1.37"
