[package]
name = "symbols"
version = "0.12.0"
edition = "2021"
authors = ["Marco Napetti"]
repository = "https://github.com/nappa85/symbols"
documentation = "https://docs.rs/symbols"
readme = "../README.md"
license = "WTFPL"
description = "Proc-macro utility to populate enums from database data"
categories = ["data-structures", "development-tools::procedural-macro-helpers", "database"]
keywords = ["proc-macro", "enum", "database"]

[dependencies]
bincode = "1.3.3"
heck = "0.4.1"
itertools = "0.11.0"
proc-macro2 = { version = "1.0.51", default-features = false }
quote = "1.0.23"
sea-orm = "0.12.0"
serde = "1.0.152"
syn = { version = "1.0.109", features = ["full"] }
symbols-models = "0.12.0"
tracing = "0.1.37"
